@@ -743,6 +743,10 @@ ONEFILTER_TARGET_FILE_ENCODING=Translated File Encoding
 
 ONEFILTER_TARGET_FILENAME_ENCODING=Translated Filename Pattern
 
+# LatexFilter.java
+
+LATEXFILTER_FILTER_NAME=LaTeX Files
+
 # PoFilter.java
 
 POFILTER_FILTER_NAME=PO Files
